--- a/styles.css
+++ b/styles.css
@@ -73,4 +73,12 @@ img {
     background-repeat: no-repeat;
     width:45vw;
     height:100vh;
+    display: flex;
+}
+
+h1 {
+    font-size: 8rem;
+    color: var(--text-color);
+    background-color: gray;
+    text-align: center;
 }
