--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ h1 {
     display: flex;
     flex-direction: column;
     padding-left: 50px;
+    width: 100%;
 }
 
 .heading, .bottom {
@@ -95,14 +96,17 @@ h1 {
 }
 
 .sign-up-area {
-    height: 30vh
+    height: 30vh;
+    width: 80%;
 }
 
 .heading {
     display: flex;
     flex-direction: column;
-    padding: 17.5vh 20vw 0 0;
+    padding: 17.5vh 0 0 0;
+    width: 80%;
     gap: 20px;
+    max-height: 35vh;
 }
 
 h6 {
