--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Germania+One&display=swap');
 
 :root {
-    --text-color: #080a0c
-    --bg-color: #f3f4f7
-    --primary-button-color: #001e03
-    --secondary-button-color: #e7e1ea
-    --accent-color: #1b151e
+    --text-color: #fdfbfe;
+    --bg-color: #040104;
+    --primary-button-color: #ff00a8;
+    --secondary-button-color: #000000;
+    --accent-color: #1e0b0c;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -59,59 +59,39 @@ table {
 
 body {
     display: flex;
-}
-
-img {
-    height: 800px;
-    overflow: hidden;
+    width: 100%;
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 .left-side-bar {
-    background-image: url(img/rat.jpg);
+    background-image: url(img/bg.jpg);
     background-size: cover;
     background-position-x: center;
     background-repeat: no-repeat;
-    width:45vw;
+    width:45%;
     height:100vh;
     display: flex;
 }
 
+img {
+    padding-bottom: 15px;
+}
+
 h1 {
-    font-size: 8rem;
-    color: var(--text-color);
-    background-color: gray;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3em;
+    font-weight: bold;
     text-align: center;
 }
 
-.right-side-bar {
-    display: flex;
-    flex-direction: column;
-    padding-left: 50px;
+.text-background {
     width: 100%;
-}
-
-.heading, .bottom {
-    height: 35vh;
-    box-sizing: border-box;
-}
-
-.sign-up-area {
-    height: 30vh;
-    width: 80%;
-}
-
-.heading {
+    background: rgba(0, 0, 0, 0.6);
+    height: 6em;
     display: flex;
-    flex-direction: column;
-    padding: 17.5vh 0 0 0;
-    width: 80%;
-    gap: 20px;
-    max-height: 35vh;
-}
-
-h6 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 1.5em;
-    line-height: 30px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80vh;
+    gap:5px;
 }
