--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Germania+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
 
 :root {
     --text-color: #fdfbfe;
@@ -62,6 +62,7 @@ body {
     width: 100%;
     background-color: var(--bg-color);
     color: var(--text-color);
+    font-family: 'Roboto Mono', monospace;
 }
 
 .left-side-bar {
@@ -69,17 +70,23 @@ body {
     background-size: cover;
     background-position-x: center;
     background-repeat: no-repeat;
-    width:45%;
     height:100vh;
     display: flex;
+    width: 800px;
+    border: solid white;
+}
+
+.right-side-bar {
+    border: solid red;
+    width: 100%;
 }
 
 img {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
 }
 
 h1 {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Roboto Mono', monospace;
     font-size: 3em;
     font-weight: bold;
     text-align: center;
@@ -94,4 +101,17 @@ h1 {
     align-items: center;
     margin-top: 80vh;
     gap:5px;
+}
+
+@media only screen and (max-width: 500px) {
+    body {
+        flex-direction: column;
+    }
+    .left-side-bar {
+        height: 20vh;
+        width: auto;
+    }
+    .text-background {
+        margin-top: 1vh;
+    }
 }
