--- a/styles.css
+++ b/styles.css
@@ -120,22 +120,35 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    flex-wrap: wrap;
-    background-color: #301d2b;
 }
 
 .form-row {
+    max-width: 100%;
     display: flex;
-    max-width: 30%;
-    flex-wrap: wrap;
+    gap: 50px;
+    margin-bottom: 20px;
 }
 
 .form-item {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 
-@media only screen and (max-width: 700px) {
+.form-item label {
+    margin-bottom: 5px;
+}
+
+.form-item input[type='text'] {
+    border: 2px solid var(--primary-button-color);
+    border-radius: 5px;
+    padding: 7px;
+    font-size: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+@media only screen and (max-width: 825px) {
     body {
         flex-direction: column;
     }
@@ -155,5 +168,8 @@ h2 {
     }
     h2 {
         font-size: 1em;
+    }
+    .form-row {
+        gap: 20px;
     }
 }
