--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body {
     background-repeat: no-repeat;
     height:100vh;
     display: flex;
+    flex-direction: column;
     width: 800px;
     box-sizing: border-box;
 }
@@ -81,7 +82,7 @@ body {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    margin: 60px;
+    margin: 60px 60px 0px 60px;
     gap: 10px;
 }
 
@@ -103,7 +104,10 @@ h2 {
 h3 {
     font-size: 0.8em;
     margin: 5px 0 40px 0;
+}
 
+h4 {
+    font-size: 0.7em;
 }
 
 .heading {
@@ -124,10 +128,17 @@ h3 {
     gap:5px;
 }
 
+.image-credit {
+    text-align: center;
+    margin-top: auto;
+}
+
 .sign-up-area {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding: 10px;
+    border: 1px solid var(--primary-button-color);
 }
 
 .form-row {
@@ -218,7 +229,7 @@ a:active {
         width: auto;
     }
     .right-side-bar {
-        margin: 5vw;
+        margin: 5vw 5vw 0 5vw;
         width: 90vw;
     }
     .text-background {
@@ -229,6 +240,9 @@ a:active {
     }
     h2 {
         font-size: 1em;
+    }
+    h4 {
+        margin-top: 150px;
     }
     .form-row {
         gap: 20px;
