Add github link to footer

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #fdfbfe;
     --bg-color: #040104;
-    --primary-button-color: #ff00a8;
+    --primary-button-color: #;
     --primary-button-hover: #ff58c7;
     --primary-button-active: #ac0072;
     --secondary-button-color: #000000;
@@ -86,8 +86,13 @@ body {
     gap: 10px;
 }
 
-img {
+.umbrella-icon {
     padding-bottom: 5px;
+}
+
+.github-icon {
+    padding-top: 4px;
+    padding-right: 3px;
 }
 
 h1 {
@@ -103,7 +108,6 @@ h2 {
 
 h3 {
     font-size: 0.8em;
-    margin: 5px 0 40px 0;
 }
 
 h4 {
@@ -128,9 +132,16 @@ h4 {
     gap:5px;
 }
 
-.image-credit {
+.footer {
     text-align: center;
     margin-top: auto;
+    margin-bottom: 5px;
+}
+
+.github {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
 }
 
 .sign-up-area {
@@ -207,7 +218,7 @@ h4 {
     background-color: var(--primary-button-active);
 }
 
-a {
+a, a:visited {
     color: var(--primary-button-color);
     text-decoration: none;
 }
@@ -241,7 +252,7 @@ a:active {
     h2 {
         font-size: 1em;
     }
-    h4 {
+    .github {
         margin-top: 150px;
     }
     .form-row {
