--- a/styles.css
+++ b/styles.css
@@ -197,9 +197,11 @@ h4 {
     background-color: #d6ffd0;
 } 
 
-.form-row button {
+.form-row button,
+.form-row button:disabled {
     font-size: 20px;
     font-weight: bold;
+    color: black;
 
     background-color: var(--primary-button-color);
 
